@@ -290,10 +290,10 @@ class Data_Model extends Model
         $conf = $this->config->conf;
 
         /*
-         * Special Templates without Host/Service
+         * Special templates without Host/Service
          */
         if($host == '__special' ){
-            // $service contains the Template name
+            // $service contains the template name
             $this->includeTemplate($service,'special');
         }else{
             if( $this->readXML($host,$service) == FALSE ){
@@ -318,11 +318,10 @@ class Data_Model extends Model
                 $tmp_struct['TIMERANGE']     = $this->TIMERANGE;
                 if(array_key_exists('ds_name',$this->RRD) ){
                      $tmp_struct['ds_name']   = $this->RRD['ds_name'][$key];
-                }else{
+                }elseif(array_key_exists($i, $this->DS)){
                      $tmp_struct['ds_name']   = $this->DS[$i]['NAME'];
-                }
-                if($this->DS){
-                    $tmp_struct['DS']      = $this->DS[$i];
+                }else{
+                     $tmp_struct['ds_name']   = "UNDEF";
                 }
                 $tmp_struct['MACRO']   = $this->MACRO;
                 if(isset($this->XML->XML->VERSION)){
@@ -350,14 +349,13 @@ class Data_Model extends Model
                     $tmp_struct['SOURCE']        = $key;
                     $tmp_struct['RRD_CALL']      = $this->TIMERANGE[$v]['cmd'] . " " . $this->RRD['opt'][$key] . " " . $this->RRD['def'][$key];
                     if(array_key_exists('ds_name',$this->RRD) ){
-                            $tmp_struct['ds_name']   = $this->RRD['ds_name'][$key];
+                        $tmp_struct['ds_name']   = $this->RRD['ds_name'][$key];
+                    }elseif(array_key_exists($i, $this->DS)){
+                        $tmp_struct['ds_name']   = $this->DS[$i]['NAME'];
                     }else{
-                            $tmp_struct['ds_name']   = $this->DS[$i]['NAME'];
+                        $tmp_struct['ds_name']   = "UNDEF";
                     }
                     $tmp_struct['TIMERANGE']     = $this->TIMERANGE[$v];
-                    if($this->DS){
-                        $tmp_struct['DS']            = $this->DS[$i];
-                    }
                     $tmp_struct['MACRO']         = $this->MACRO;
                     if(isset($this->XML->XML->VERSION)){
                         $tmp_struct['VERSION']   = pnp::xml_version_check( (string) $this->XML->XML->VERSION);
@@ -384,12 +382,11 @@ class Data_Model extends Model
                 $tmp_struct['RRD_CALL']      = $this->TIMERANGE[$view]['cmd'] . " ". $this->RRD['opt'][$key] . " " . $this->RRD['def'][$key];
                 $tmp_struct['TIMERANGE']     = $this->TIMERANGE[$view];
                 if(array_key_exists('ds_name',$this->RRD) ){
-                     $tmp_struct['ds_name']  = $this->RRD['ds_name'][$key];
+                    $tmp_struct['ds_name']   = $this->RRD['ds_name'][$key];
+                }elseif(array_key_exists($i, $this->DS)){
+                    $tmp_struct['ds_name']   = $this->DS[$i]['NAME'];
                 }else{
-                     $tmp_struct['ds_name']  = $this->DS[$i]['NAME'];
-                }
-                if($this->DS){
-                    $tmp_struct['DS']            = $this->DS[$i];
+                    $tmp_struct['ds_name']   = "UNDEF";
                 }
                 $tmp_struct['MACRO']         = $this->MACRO;
                 if(isset($this->XML->XML->VERSION)){
