@@ -1,5 +1,7 @@
 **pnp-0.6.6 ??/??/2010**
 
+  * Bugfix: Fixed max amount of graphs per template 
+
 **pnp-0.6.5 07/09/2010**
 
   * Feature: Special Templates are back [[tpl_special]]
